# -hrms-human-resource-management-system

./: .gitignore  Makefile  README.md  docker-compose.yml
backend-hrm/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
backend-hrm/app/: __init__.py  main.py
backend-hrm/app/api/v1/: attendance.py  auth.py  calendar.py  dashboard.py  departments.py  employees.py  health.py  holidays.py  leave_balances.py  leave_requests.py  leave_types.py  permissions.py  (+3 more)
backend-hrm/app/core/: config.py  dependencies.py  security.py
backend-hrm/app/db/: base.py  seed.py  seed_data.py
backend-hrm/app/models/: __init__.py  attendance.py  department.py  employee.py  holiday.py  leave_balance.py  leave_request.py  leave_type.py  permission.py  role.py  user.py
backend-hrm/app/repositories/: attendance_repository.py  department_repository.py  employee_repository.py  holiday_repository.py  leave_balance_repository.py  leave_request_repository.py  leave_type_repository.py  permission_repository.py  role_repository.py  user_repository.py
backend-hrm/app/schemas/: attendance.py  auth.py  department.py  employee.py  holiday.py  leave_balance.py  leave_request.py  leave_type.py  permission.py  role.py
backend-hrm/app/services/: attendance_service.py  auth_service.py  department_service.py  employee_service.py  holiday_service.py  leave_balance_service.py  leave_request_service.py  leave_type_service.py  permission_service.py  role_service.py
backend-hrm/app/utils/: exceptions.py  responses.py
backend-hrm/docs/: API.md
(+50 files in other folders)
