[tool.poetry]
name = "hrms-backend"
version = "1.0.0"
description = "HRMS Lite - FastAPI Backend"
authors = ["HRMS Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
pydantic = { extras = ["email-validator"], version = "^2.9.0" }
pydantic-settings = "^2.6.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
bcrypt = "^4.0.0"
alembic = "^1.13.0"
python-multipart = "^0.0.12"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
black = "^24.10.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
